fixed layout issues in home page

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -20,19 +20,20 @@ $fs-38: 38.75;
 $fs-45: 45.24;
 $fs-55: 55.06;
 $fs-64: 64.88;
-$fs-107: 107.51;
+// $fs-107: 107.51;
+$fs-107: 120.51;
 
 // layout measurements 
 $max-width: 1492.4;
-$padding: 118;
+$padding: 122;
 
 // padding measurement
 $s-100:40.75;
 $s-200:69.66;
 $s-300:103.87;
-$s-400:126;
+$s-400:131.82;
 $s-500:138.99;
-$s-600:145;
+$s-600:130;
 $s-700:158.6;
 $s-800:161;
 
