--- a/src/scss/utilities/_container.scss
+++ b/src/scss/utilities/_container.scss
@@ -13,8 +13,6 @@
 
 .container-columns {
     display: flex;
-    gap: 1rem;
     justify-content: space-between;
-    align-items: center;
-    width: 100%;
+    
 }
