--- a/src/scss/utilities/_padding.scss
+++ b/src/scss/utilities/_padding.scss
@@ -8,9 +8,9 @@
     padding-block: a.div(a.$s-400);
 }
 
-// .padding-block-800 {
-//     padding-top: a.div(a.$s-800);
-// }
+.padding-block-800 {
+    padding-top: a.div(a.$s-800);
+}
 
 .padding-block-600 {
     padding-bottom: a.div(a.$s-600);
